tests/health/gold/sdk/tests__number_test.toit.gold
tests/number_test.toit:236:32: warning: Deprecated 'int.parse'
  expect_int_parsing_error: int.parse "1_123" 1
                               ^
tests/number_test.toit:237:32: warning: Deprecated 'int.parse'
  expect_int_parsing_error: int.parse "1012_" 1
                               ^
tests/number_test.toit:238:32: warning: Deprecated 'int.parse'
  expect_int_parsing_error: int.parse "1012_1" 1 5
                               ^
tests/number_test.toit:240:36: warning: Deprecated 'int.parse'
  expect_number_out_of_bounds: (int.parse "123" -1 --on_error=: throw it)
                                   ^
tests/number_test.toit:241:36: warning: Deprecated 'int.parse'
  expect_number_out_of_bounds: (int.parse "123" 0 4 --on_error=: throw it)
                                   ^
tests/number_test.toit:242:36: warning: Deprecated 'int.parse'
  expect_number_out_of_bounds: (int.parse "123" 0 0 --on_error=: throw it)
                                   ^
tests/number_test.toit:247:10: warning: Deprecated 'int.parse'
      int.parse "123" 1
         ^
tests/number_test.toit:250:10: warning: Deprecated 'int.parse'
      int.parse "1-23" 1
         ^
tests/number_test.toit:253:10: warning: Deprecated 'int.parse'
      int.parse "1-23" 2
         ^
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
